# plugify-plugin-dyncall

./: CHANGELOG.md  CMakeLists.txt  README.md  dyncall.json  dyncall.pplugin.in  plugify-plugin-dyncall.pplugin.in
.github/workflows/: cmake-multiple-platform.yml
cmake/: FetchDyncall.cmake  dyncall.cmake
conda/: bld.bat  build.sh  meta.yaml.example
src/: plugin.cpp
sym/: exported_symbols.lds  version_script.lds
